Update theme for Gallery 2.2, localization fixes, wrap long lines, rename 2 parameters so they are treated as block lists (this allows removing local copy of loadTemplate in theme.inc)
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@14455 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/carbon/theme.css
+++ b/themes/carbon/theme.css
@@ -340,8 +340,6 @@ div.gbTabBar span.o {
  * #gsNavBar        Top bar with breadcrumb and other links
  * #gsSidebar       Sidebar
  * #gsContent       Main content
- * #giFormUsername  Form field for entering a username
- * #giFormGroupname Form field for entering a group name
  */
 
 #gsNavBar div {
@@ -358,28 +356,8 @@ div.gbTabBar span.o {
 
 #gsSidebar ul span { color: #999; }
 
-#giFormUsername, .giFormUsername {
-  background: url('../carbon/images/userinfo.png') no-repeat 0 1px;
-  padding-left: 17px;
+#giFormUsername, .giFormUsername, #giFormGroupname, #giFormPassword {
   background-color: #fff
-}
-
-#giFormGroupname {
-  background: url('../carbon/images/groupinfo.png') no-repeat 0 1px;
-  padding-left: 17px;
-  background-color: #fff
-}
-
-#giFormPassword {
-  background: url('../carbon/images/key.gif') no-repeat 0 1px;
-  padding-left: 17px;
-  background-color: #fff
-}
-
-/* Opera ignores padding in form inputs; put icons on right side instead */
-#gallery.opera #giFormUsername, #gallery.opera .giFormUsername,
-#gallery.opera #giFormGroupname, #gallery.opera #giFormPassword {
-  background-position: right center;
 }
 
 div.gbNavigator div.first-and-previous { float: left; }
